add css sourcemap false &  productionsourcemap false

--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+	<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyCDPKjXYGh8fE_zVNiSVaMPQhNJaPdP3qM",
+	    authDomain: "mymarkdown2-7b0a7.firebaseapp.com",
+	    databaseURL: "https://mymarkdown2-7b0a7.firebaseio.com",
+	    projectId: "mymarkdown2-7b0a7",
+	    storageBucket: "mymarkdown2-7b0a7.appspot.com",
+	    messagingSenderId: "971030477011"
+	  };
+	  firebase.initializeApp(config);
+	</script>
   </body>
 </html>
